--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -17,7 +17,7 @@ jobs:
         python-version:
           - "3.8"
         plone-version:
-          - "5.2.4"
+          - "5.2.5"
 
     steps:
       - uses: actions/checkout@v2
@@ -46,7 +46,8 @@ jobs:
         run: |
           python -m venv .
           ./bin/pip install "pip==19.2.3"
-          ./bin/pip install -U setuptools wheel
+          ./bin/pip install "setuptools==57.4.0"
+          ./bin/pip install -U wheel
 
       - name: Install Plone
         run: |
