Reduce docker image size using multi-stage build.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,26 @@
-FROM node:14
+FROM node:14-slim as base
+FROM base as builder
 
 # Create app directory
 WORKDIR /usr/src/app
 
+RUN apt-get update \
+    && buildDeps="python3 build-essential" \
+    && apt-get install -y --no-install-recommends $buildDeps\
+    && rm -rf /var/lib/apt/lists/*
+
+# Install app dependencies
+# A wildcard is used to ensure both package.json AND package-lock.json are copied
+# where available (npm@5+)
+COPY package.json yarn.lock  ./
+RUN yarn install --prod
+
+# Bundle app source
+COPY . .
+
+RUN yarn build
+
+FROM base
 
 LABEL maintainer="Plone Foundation <conf@plone.org>" \
       org.label-schema.name="plone" \
@@ -10,17 +28,11 @@ LABEL maintainer="Plone Foundation <conf@plone.org>" \
       org.label-schema.vendor="Plone Foundation" \
       org.label-schema.docker.cmd="docker run -d -p 3000:3000 plone/ploneconf-frontend:latest"
 
+WORKDIR /usr/src
 
-# Install app dependencies
-# A wildcard is used to ensure both package.json AND package-lock.json are copied
-# where available (npm@5+)
-COPY package.json yarn.lock  ./
-RUN yarn install
+COPY --from=builder /usr/src/app .
 
-# Bundle app source
-COPY . .
-
-RUN yarn build
+WORKDIR /usr/src/app
 
 EXPOSE 3000
 
