Reduce Docker layers

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,13 +7,9 @@ LABEL maintainer="Plone Foundation <conf@plone.org>" \
       org.label-schema.docker.cmd="docker run -d -p 8080:8080 plone/ploneconf-api:latest"
 
 # Add local code
-COPY requirements.txt requirements.txt
-COPY requirements requirements
-COPY scripts scripts
-COPY src src
-RUN ./bin/pip install -r requirements.txt
-
-RUN mkdir /app/var_instance
+COPY . ./
+RUN ./bin/pip install -r requirements.txt \
+    && mkdir /app/var_instance
 
 # Copy ZEO Config
 COPY skel/etc/zeo.conf /app/etc/zope.conf
