--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,9 @@
     "cypress:run": "NODE_ENV=test cypress run",
     "cypress:open": "NODE_ENV=test cypress open",
     "cypress:start-frontend": "RAZZLE_API_PATH=http://localhost:55001/plone yarn start",
-		"cypress:test-acceptance-server": "make test-acceptance-server",
-		"cy:test:fixture:setup": "node cypress/support/reset-fixture.js",
-		"cy:test:fixture:teardown": "node cypress/support/reset-fixture.js teardown",
+    "cypress:test-acceptance-server": "make test-acceptance-server",
+    "cy:test:fixture:setup": "node cypress/support/reset-fixture.js",
+    "cy:test:fixture:teardown": "node cypress/support/reset-fixture.js teardown",
     "ci:start-backend": "make start-test-backend",
     "ci:start-frontend": "RAZZLE_API_PATH=http://localhost:55001/plone yarn build && start-test start:prod http-get://localhost:3000 cypress:run",
     "ci:cypress:run": "start-test ci:start-backend http-get://localhost:55001/plone ci:start-frontend",
@@ -38,7 +38,15 @@
   },
   "private": false,
   "workspaces": [],
-  "addons": ["volto-slate:minimalDefault,simpleLink","@eeacms/volto-accordion-block","volto-authomatic","volto-form-block","@kitconcept/volto-separator-block","@kitconcept/volto-blocks-grid"],
+  "addons": [
+    "volto-slate:minimalDefault,simpleLink",
+    "@eeacms/volto-accordion-block",
+    "volto-authomatic",
+    "volto-form-block",
+    "@kitconcept/volto-separator-block",
+    "@kitconcept/volto-blocks-grid",
+    "volto-conf2022-theme"
+  ],
   "jest": {
     "modulePathIgnorePatterns": [
       "api"
@@ -145,7 +153,7 @@
     "volto-form-block": "*",
     "@kitconcept/volto-blocks-grid": "*",
     "@kitconcept/volto-separator-block": "*"
-},
+  },
   "devDependencies": {
     "eslint-plugin-prettier": "3.1.3",
     "jest-junit": "8.0.0",
