--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,10 +20,11 @@ exclude = '''
 '''
 
 [tool.isort]
+profile = "black"
 force_alphabetical_sort = true
 force_single_line = true
 lines_after_imports = 2
-line_length = 88
+line_length = 120
 
 [tool.flakeheaven]
 format="grouped"
