Use plone/code-analysis-action

--- a/.github/workflows/backend-code-analysis.yml
+++ b/.github/workflows/backend-code-analysis.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run check
-        uses: kitconcept/code-analysis-action@main
+        uses: plone/code-analysis-action@v1
         with:
           base_dir: 'backend'
           check: 'black'
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run check
-        uses: kitconcept/code-analysis-action@main
+        uses: plone/code-analysis-action@v1
         with:
           base_dir: 'backend'
           check: 'flake8'
@@ -46,7 +46,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run check
-        uses: kitconcept/code-analysis-action@main
+        uses: plone/code-analysis-action@v1
         with:
           base_dir: 'backend'
           check: 'isort'
@@ -62,7 +62,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run check
-        uses: kitconcept/code-analysis-action@main
+        uses: plone/code-analysis-action@v1
         with:
           base_dir: 'backend'
           check: 'zpretty'
