Initial deployment configuration

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,6 +1,12 @@
-*
-!requirements.txt
-!requirements/
-!skel
-!src
-!scripts
+.editorconfig
+.gitattributes
+bin
+Dockerfile
+include
+instance
+instance.yaml
+lib
+lib64
+Makefile
+pyvenv.cfg
+var
