--- a/dockerfiles/docker-compose-local.yml
+++ b/dockerfiles/docker-compose-local.yml
@@ -13,7 +13,7 @@ services:
 
   frontend:
     build:
-      context: ./frontend
+      context: ../frontend
     environment:
       RAZZLE_INTERNAL_API_PATH: http://backend:8080/Plone
     ports:
@@ -23,9 +23,10 @@ services:
 
   backend:
     build:
-      context: ./backend
+      context: ../backend
     environment:
       SITE: Plone
+      ADDITIONAL_PROFILES: "ploneconf.core:default,ploneconf.core:initial"
       RELSTORAGE_DSN: "dbname='plone' user='plone' host='db' password='plone'"
     depends_on:
       - db
