--- a/dockerfiles/default.conf
+++ b/dockerfiles/default.conf
@@ -10,7 +10,7 @@ server {
   server_name  ploneconf.localhost;
 
   location ~ /\+\+api\+\+($|/.*) {
-      rewrite ^/(\+\+api\+\+\/?)+($|/.*) /VirtualHostBase/http/$server_name/Plone/++api++/VirtualHostRoot/$1 break;
+      rewrite \+\+api\+\+\/?($|/.*) /VirtualHostBase/http/$server_name/Plone/++api++/VirtualHostRoot/$1 break;
       proxy_pass http://backend;
   }
 
