--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "stylelint:overrides": "stylelint 'theme/**/*.overrides' 'src/**/*.overrides'",
     "stylelint:fix": "yarn stylelint --fix && yarn stylelint:overrides --fix",
     "test": "razzle test --env=jest-environment-jsdom-sixteen --passWithNoTests",
+    "test:ci": "CI=true razzle test --env=jest-environment-jsdom-sixteen --passWithNoTests",
     "cypress:run": "NODE_ENV=test cypress run",
     "cypress:open": "NODE_ENV=test cypress open",
     "cypress:start-frontend": "RAZZLE_API_PATH=http://localhost:55001/plone yarn start",
