--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ploneconf",
+  "name": "ploneconf-frontend",
   "description": "Plone Conference 2022 website",
   "license": "MIT",
   "version": "1.0.0",
