Update Docker image generation

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,7 +17,7 @@ RUN yarn install \
 FROM base
 
 LABEL maintainer="Plone Foundation <conf@plone.org>" \
-      org.label-schema.name="plone" \
+      org.label-schema.name="ploneconf-frontend" \
       org.label-schema.description="Plone Conference 2022 frontend." \
       org.label-schema.vendor="Plone Foundation" \
       org.label-schema.docker.cmd="docker run -d -p 3000:3000 plone/ploneconf-frontend:latest"
