--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -140,8 +140,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           platforms: linux/amd64
-          context: backend/
-          file: Dockerfile
+          context: backend
+          file: backend/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
