--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -128,8 +128,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           platforms: linux/amd64
-          context: backend/
-          file: Dockerfile
+          context: frontend/
+          file: frontend/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
