--- a/dockerfiles/docker-compose-latest.yml
+++ b/dockerfiles/docker-compose-latest.yml
@@ -12,7 +12,7 @@ services:
     - "80:80"
 
   frontend:
-    image: plone/ploneconf-frontend:latest
+    image: plone/ploneconf-frontend:2022
     environment:
       RAZZLE_INTERNAL_API_PATH: http://backend:8080/Plone
     ports:
@@ -21,7 +21,7 @@ services:
       - backend
 
   backend:
-    image: plone/ploneconf-backend:latest
+    image: plone/ploneconf-backend:2022
     environment:
       SITE: Plone
       ADDITIONAL_PROFILES: "ploneconf.core:default,ploneconf.core:initial"
