--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = hosts.yml
+inventory = inventory
 retry_files_enabled = False
 allow_world_readable_tmpfiles = true
 interpreter_python=auto
