--- a/ansible/.gitignore
+++ b/ansible/.gitignore
@@ -1,9 +1,11 @@
 .docker
+.env_prod
 .vagrant
 .vagrant_private_key
-.env_prod
 bin
 include
+inventory/prod.yml
+host_vars/ploneconf-prod.yml
 lib
 lib64
 pyvenv.cfg
