Add GoogleAnalytics tracking to the site

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -154,7 +154,8 @@
     "volto-authomatic": "*",
     "volto-form-block": "*",
     "@kitconcept/volto-blocks-grid": "*",
-    "@kitconcept/volto-separator-block": "*"
+    "@kitconcept/volto-separator-block": "*",
+    "react-ga4": "1.4.1"
   },
   "devDependencies": {
     "eslint-plugin-prettier": "3.1.3",
