--- a/devops/stacks/plone.yml
+++ b/devops/stacks/plone.yml
@@ -68,7 +68,7 @@ services:
     - traefik-public
     - backend
     deploy:
-      # replicas: 1
+      replicas: 2
       labels:
         - traefik.enable=true
         - traefik.docker.network=traefik-public
@@ -102,7 +102,7 @@ services:
     - traefik-public
     - backend
     deploy:
-      # replicas: 1
+      replicas: 2
       labels:
         - traefik.enable=true
         - traefik.docker.network=traefik-public
@@ -126,7 +126,7 @@ services:
         - traefik.http.routers.backend_alternative.middlewares=gzip, backend_alternative
 
   db:
-    image: postgres
+    image: postgres:14.2
     environment:
       POSTGRES_USER: plone
       POSTGRES_PASSWORD: plone
