--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "volto-form-block",
     "@kitconcept/volto-separator-block",
     "@kitconcept/volto-blocks-grid",
+    "@eeacms/volto-matomo",
     "volto-conf2022-theme"
   ],
   "jest": {
@@ -155,7 +156,8 @@
     "volto-form-block": "*",
     "@kitconcept/volto-blocks-grid": "*",
     "@kitconcept/volto-separator-block": "*",
-    "react-ga4": "1.4.1"
+    "react-ga4": "1.4.1",
+    "@eeacms/volto-matomo": "2.0.7"
   },
   "devDependencies": {
     "eslint-plugin-prettier": "3.1.3",
