Filter only by services that should be running

--- a/devops/Makefile
+++ b/devops/Makefile
@@ -103,7 +103,7 @@ deploy: ## Deploy stacks: Plone
 .PHONY: status
 status: ## Check status of stack
 	@echo "$(GREEN)==> Stack status in $(DEPLOY_ENV) $(RESET)"
-	${DOCKER_CONTEXT} stack ps plone
+	${DOCKER_CONTEXT} stack ps -f "desired-state=running" plone
 
 .PHONY: logs-webserver
 logs-webserver: ## Display webserver logs
