--- a/backend/Dockerfile.acceptance
+++ b/backend/Dockerfile.acceptance
@@ -10,10 +10,10 @@ ENV ZSERVER_HOST=0.0.0.0
 ENV ZSERVER_PORT=55001
 ENV CONFIGURE_PACKAGES="plone.restapi,plone.volto,plone.volto.cors,ploneconf.core"
 ENV APPLY_PROFILES="ploneconf.core:default,ploneconf.core:initial"
-RUN ./bin/pip install "plone.app.robotframework==2.0.0a3" "plone.app.testing[robot]==7.0.0a3"
+RUN ./bin/pip install "plone.app.robotframework==2.0.0a6" "plone.app.testing[robot]==7.0.0a3"
 
 # Add local code
 COPY . .
 RUN ./bin/pip install -r requirements.txt
 
-CMD ["./bin/robot-server",  "plone.app.robotframework.testing.PLONE_ROBOT_TESTING"]
+CMD ["./bin/robot-server",  "plone.app.robotframework.testing.VOLTO_ROBOT_TESTING"]
