--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -104,11 +104,6 @@ jobs:
       - name: Install Cypress
         run: npm i cypress
 
-      - name: debug info
-        run: |
-          pwd
-          ls -lah *
-
       - name: Cypress acceptance tests
         uses: cypress-io/github-action@v2
         env:
@@ -122,6 +117,6 @@ jobs:
           working-directory: frontend
           install: false
           start: |
-            docker run --rm -p 55001:55001 --name ploneconf-backend-acceptance -i plone/ploneconf-backend:acceptance
-            docker run --rm -p 3000:3000 --name ploneconf-frontend-acceptance --link ploneconf-backend-acceptance:backend -e RAZZLE_API_PATH=http://localhost:55001/plone -e RAZZLE_INTERNAL_API_PATH=http://backend:55001/plone -i plone/ploneconf-frontend:acceptance
+            docker run --rm -p 55001:55001 --name ploneconf-backend-acceptance -d plone/ploneconf-backend:acceptance
+            docker run --rm -p 3000:3000 --name ploneconf-frontend-acceptance --link ploneconf-backend-acceptance:backend -e RAZZLE_API_PATH=http://localhost:55001/plone -e RAZZLE_INTERNAL_API_PATH=http://backend:55001/plone -d plone/ploneconf-frontend:acceptance
           wait-on: 'npx wait-on --httpTimeout 20000 http-get://localhost:55001/plone http://localhost:3000'
