--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -117,6 +117,5 @@ jobs:
           working-directory: frontend
           install: false
           start: |
-            docker run --rm -p 55001:55001 --name ploneconf-backend-acceptance -i plone/ploneconf-backend:acceptance
-            docker run --rm -p 3000:3000 --name ploneconf-frontend-acceptance --link ploneconf-backend-acceptance -e RAZZLE_API_PATH=http://localhost:55001/plone -e RAZZLE_INTERNAL_API_PATH=http://backend:55001/plone -i plone/ploneconf-frontend:acceptance
+            docker compose -f cypress/compose.yml up
           wait-on: 'npx wait-on --httpTimeout 20000 http-get://localhost:55001/plone http://localhost:3000'
