--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -67,8 +67,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: backend
-          file: backend/Dockerfile
+          context: frontend
+          file: frontend/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           outputs: type=docker,dest=/tmp/frontend-image.tar
 
