--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -101,6 +101,9 @@ jobs:
           docker load --input /tmp/backend/backend-image.tar
           docker load --input /tmp/frontend/frontend-image.tar
 
+      - name: Install Cypress
+        run: npm i cypress
+
       - name: Cypress acceptance tests
         uses: cypress-io/github-action@v2
         env:
@@ -111,6 +114,7 @@ jobs:
           browser: chrome
           spec: cypress/integration/*.js
           working-directory: frontend
+          install: false
           start: |
             docker compose -f cypress/compose.yml up
           wait-on: 'npx wait-on --httpTimeout 20000 http-get://localhost:55001/plone http://localhost:3000'
