--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -10,8 +10,15 @@ on:
 
 jobs:
 
-  build-backend:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - image: backend
+            file: Dockerfile.acceptance
+          - image: frontend
+            file: Dockerfile
     steps:
 
       - name: Checkout
@@ -22,7 +29,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: |
-            plone/ploneconf-backend
+            plone/ploneconf-${{ matrix.image }}
           tags: |
             type=sha
             type=raw,value=acceptance
@@ -33,56 +40,21 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: backend
-          file: backend/Dockerfile.acceptance
+          context: ${{ matrix.image }}
+          file: ${{ matrix.image }}/${{ matrix.file }}
           tags: ${{ steps.meta.outputs.tags }}
-          outputs: type=docker,dest=/tmp/backend-image.tar
+          outputs: type=docker,dest=/tmp/${{ matrix.image }}-image.tar
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: backend
-          path: /tmp/backend-image.tar
-
-  build-frontend:
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: |
-            plone/ploneconf-frontend
-          tags: |
-            type=sha
-            type=raw,value=acceptance
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: frontend
-          file: frontend/Dockerfile
-          tags: ${{ steps.meta.outputs.tags }}
-          outputs: type=docker,dest=/tmp/frontend-image.tar
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: frontend
-          path: /tmp/frontend-image.tar
+          name: ${{ matrix.image }}
+          path: /tmp/${{ matrix.image }}-image.tar
 
   acceptance-test:
     runs-on: ubuntu-latest
     needs:
-      - build-backend
-      - build-frontend
+      - build
     steps:
 
       - name: Checkout
