Upgrade volto, add @kitconcept/volto-slider-block

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "volto-form-block",
     "@kitconcept/volto-separator-block",
     "@kitconcept/volto-blocks-grid",
+    "@kitconcept/volto-slider-block",
     "@eeacms/volto-matomo",
     "volto-conf2022-theme"
   ],
@@ -147,13 +148,14 @@
     "node": "^14 || ^16"
   },
   "dependencies": {
-    "@plone/volto": "16.0.0-alpha.7",
+    "@plone/volto": "16.0.0-alpha.11",
     "volto-slate": "*",
     "@eeacms/volto-accordion-block": "*",
     "volto-authomatic": "*",
     "volto-form-block": "*",
     "@kitconcept/volto-blocks-grid": "*",
     "@kitconcept/volto-separator-block": "*",
+    "@kitconcept/volto-slider-block": "*",
     "react-ga4": "1.4.1",
     "@eeacms/volto-matomo": "2.0.8"
   },
