Fix Cypress tests

--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -74,7 +74,7 @@ jobs:
           docker load --input /tmp/frontend/frontend-image.tar
 
       - name: Install Cypress
-        run: npm i cypress @testing-library/cypress cypress-file-upload cypress-axe
+        run: npm i @plone/volto-testing
 
       - name: Cypress acceptance tests
         uses: cypress-io/github-action@v2
