--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -84,9 +84,9 @@ jobs:
         with:
           parallel: false
           browser: chrome
-          spec: frontend/cypress/integration/*.js
-          config-file: frontend/cypress.json
+          spec: cypress/integration/*.js
+          working-directory: frontend
           install: false
           start: |
-            docker compose -f frontend/cypress/compose.yml up
+            docker compose -f cypress/compose.yml up
           wait-on: 'npx wait-on --httpTimeout 20000 http-get://localhost:55001/plone http://localhost:3000'
