--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,7 @@
   "addons": [
     "volto-slate:minimalDefault,simpleLink",
     "@eeacms/volto-accordion-block",
-    "volto-authomatic",
+    "@plone-collective/volto-authomatic",
     "volto-form-block",
     "@kitconcept/volto-separator-block",
     "@kitconcept/volto-blocks-grid",
@@ -152,7 +152,7 @@
     "@plone/volto": "16.0.0-alpha.11",
     "volto-slate": "*",
     "@eeacms/volto-accordion-block": "*",
-    "volto-authomatic": "*",
+    "@plone-collective/volto-authomatic": "*",
     "volto-form-block": "*",
     "@kitconcept/volto-blocks-grid": "*",
     "@kitconcept/volto-separator-block": "*",
