Use @plone-collective/volto-tito-block

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "volto-slate:minimalDefault,simpleLink",
     "@eeacms/volto-accordion-block",
     "@plone-collective/volto-authomatic",
+    "@plone-collective/volto-tito-block",
     "volto-form-block",
     "@kitconcept/volto-separator-block",
     "@kitconcept/volto-blocks-grid",
@@ -153,6 +154,7 @@
     "volto-slate": "*",
     "@eeacms/volto-accordion-block": "*",
     "@plone-collective/volto-authomatic": "*",
+    "@plone-collective/volto-tito-block": "*",
     "volto-form-block": "*",
     "@kitconcept/volto-blocks-grid": "*",
     "@kitconcept/volto-separator-block": "*",
