--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "@eeacms/volto-accordion-block",
     "@plone-collective/volto-tito-block",
     "volto-form-block",
+    "@plone-collective/volto-authomatic",
     "@kitconcept/volto-separator-block",
     "@kitconcept/volto-blocks-grid",
     "@kitconcept/volto-slider-block",
@@ -157,6 +158,7 @@
     "@kitconcept/volto-blocks-grid": "*",
     "@kitconcept/volto-separator-block": "*",
     "@kitconcept/volto-slider-block": "*",
+    "@plone-collective/volto-authomatic": "*",
     "@eeacms/volto-matomo": "2.0.8",
     "react-compound-timer": "1.2.0"
   },
