--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -76,7 +76,7 @@ jobs:
           docker load --input /tmp/frontend/frontend-image.tar
 
       - name: Install Cypress
-        run: npm i @plone/volto-testing @testing-library/dom@8.17.1
+        run: npm i @plone/volto-testing
 
       - name: Cypress acceptance tests
         uses: cypress-io/github-action@v4
