--- a/frontend/package.json
+++ b/frontend/package.json
@@ -151,28 +151,28 @@
     "node": "^14 || ^16"
   },
   "dependencies": {
-    "@plone/volto": "16.0.0-alpha.20",
     "@eeacms/volto-accordion-block": "*",
-    "@plone-collective/volto-tito-block": "*",
-    "volto-form-block": "*",
-    "@kitconcept/volto-blocks-grid": "*",
-    "@kitconcept/volto-separator-block": "*",
-    "@kitconcept/volto-slider-block": "*",
-    "@plone-collective/volto-authomatic": "*",
     "@eeacms/volto-matomo": "2.0.8",
-    "react-compound-timer": "1.2.0"
+    "@kitconcept/volto-blocks-grid": "5.0.1",
+    "@kitconcept/volto-separator-block": "2.0.0",
+    "@kitconcept/volto-slider-block": "2.0.0",
+    "@plone-collective/volto-authomatic": "*",
+    "@plone-collective/volto-tito-block": "*",
+    "@plone/volto": "16.0.0-alpha.34",
+    "react-compound-timer": "1.2.0",
+    "volto-form-block": "*"
   },
   "devDependencies": {
-    "eslint-plugin-prettier": "3.1.3",
-    "jest-junit": "8.0.0",
-    "mrs-developer": "*",
-    "postcss": "8.3.11",
-    "prettier": "2.0.5",
     "@storybook/addon-actions": "^6.3.0",
     "@storybook/addon-controls": "6.3.0",
     "@storybook/addon-essentials": "^6.3.0",
     "@storybook/addon-links": "^6.3.0",
     "@storybook/react": "^6.3.0",
+    "eslint-plugin-prettier": "3.1.3",
+    "jest-junit": "8.0.0",
+    "mrs-developer": "*",
+    "postcss": "8.3.11",
+    "prettier": "2.0.5",
     "stylelint": "14.0.1",
     "stylelint-config-idiomatic-order": "8.1.0",
     "stylelint-config-prettier": "8.0.1",
