--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "postinstall": "yarn omelette && yarn patches",
     "omelette": "if [ ! -d omelette ]; then ln -sf node_modules/@plone/volto omelette; fi",
     "patches": "/bin/bash patches/patchit.sh > /dev/null 2>&1 ||true",
-    "build": "razzle build",
+    "build": "razzle build --noninteractive",
     "lint": "./node_modules/eslint/bin/eslint.js --max-warnings=0 'src/**/*.{js,jsx}'",
     "lint:fix": "./node_modules/eslint/bin/eslint.js --max-warnings=0 --fix 'src/**/*.{js,jsx}'",
     "lint:ci": "./node_modules/eslint/bin/eslint.js --max-warnings=0 -f checkstyle 'src/**/*.{js,jsx}' > eslint.xml",
@@ -55,9 +55,6 @@
     ],
     "transform": {
       "^.+\\.js(x)?$": "babel-jest",
-      "^.+\\.css$": "jest-css-modules",
-      "^.+\\.scss$": "jest-css-modules",
-      "^.+\\.less$": "jest-css-modules",
       "^.+\\.(png)$": "jest-file",
       "^.+\\.(jpg)$": "jest-file",
       "^.+\\.(svg)$": "./node_modules/@plone/volto/jest-svgsystem-transform.js"
@@ -73,7 +70,8 @@
       "load-volto-addons": "<rootDir>/node_modules/@plone/volto/jest-addons-loader.js",
       "@package/(.*)$": "<rootDir>/src/$1",
       "@root/(.*)$": "<rootDir>/src/$1",
-      "~/(.*)$": "<rootDir>/src/$1"
+      "~/(.*)$": "<rootDir>/src/$1",
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
     },
     "coverageThreshold": {
       "global": {
@@ -153,16 +151,18 @@
   "dependencies": {
     "@eeacms/volto-accordion-block": "*",
     "@eeacms/volto-matomo": "2.0.8",
-    "@kitconcept/volto-blocks-grid": "5.0.1",
+    "@kitconcept/volto-blocks-grid": "5.1.1",
     "@kitconcept/volto-separator-block": "2.0.0",
     "@kitconcept/volto-slider-block": "2.0.0",
     "@plone-collective/volto-authomatic": "*",
     "@plone-collective/volto-tito-block": "*",
     "@plone/volto": "16.0.0-alpha.41",
     "react-compound-timer": "1.2.0",
-    "volto-form-block": "*"
+    "volto-form-block": "*",
+    "yarn-deduplicate": "6.0.0"
   },
   "devDependencies": {
+    "@plone/scripts": "^2.1.1",
     "@storybook/addon-actions": "^6.3.0",
     "@storybook/addon-controls": "6.3.0",
     "@storybook/addon-essentials": "^6.3.0",
@@ -177,5 +177,8 @@
     "stylelint-config-idiomatic-order": "8.1.0",
     "stylelint-config-prettier": "8.0.1",
     "stylelint-prettier": "1.1.2"
+  },
+  "resolutions": {
+    "**/@plone/scripts": "^2.1.1"
   }
 }
