--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,8 @@
     "stylelint": "stylelint 'theme/**/*.{css,less}' 'src/**/*.{css,less}'",
     "stylelint:overrides": "stylelint 'theme/**/*.overrides' 'src/**/*.overrides'",
     "stylelint:fix": "yarn stylelint --fix && yarn stylelint:overrides --fix",
-    "test": "razzle test --env=jest-environment-jsdom-sixteen --passWithNoTests",
-    "test:ci": "CI=true razzle test --env=jest-environment-jsdom-sixteen --passWithNoTests",
+    "test": "razzle test --passWithNoTests",
+    "test:ci": "CI=true razzle test --passWithNoTests",
     "cypress:run": "NODE_ENV=test cypress run",
     "cypress:open": "NODE_ENV=test cypress open",
     "cypress:start-frontend": "RAZZLE_API_PATH=http://localhost:55001/plone yarn start",
@@ -158,8 +158,7 @@
     "@plone-collective/volto-tito-block": "*",
     "@plone/volto": "16.0.0-alpha.41",
     "react-compound-timer": "1.2.0",
-    "volto-form-block": "*",
-    "yarn-deduplicate": "6.0.0"
+    "volto-form-block": "*"
   },
   "devDependencies": {
     "@plone/scripts": "^2.1.1",
