--- a/.github/workflows/test-frontend.yml
+++ b/.github/workflows/test-frontend.yml
@@ -3,70 +3,28 @@ on:
   push:
     paths:
       - "frontend/**"
+      - ".github/workflows/test-frontend.yml"
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./frontend
-    strategy:
-      matrix:
-        node-version: [14.x]
-        python-version: [3.7]
-    steps:
-      - uses: actions/checkout@v2
-
-      # node setup
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      # node cache
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v1
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      # node install
-      - run: yarn install --frozen-lockfile
-
-      # node code analysis
-      - name: Prettier check
-        run: yarn run prettier
-      - name: ESlint check
-        run: yarn run lint
-
-
   docker:
     runs-on: ubuntu-latest
     needs: build
     steps:
 
       - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: frontend
-          push: ${{ github.ref == 'refs/heads/main' }}
-          tags: plone/ploneconf-frontend:latest
+          push: ${{ github.ref == 'refs/heads/2021' }}
+          tags: plone/ploneconf-frontend:2021
