--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -30,3 +30,28 @@ jobs:
           context: api
           push: ${{ github.ref == 'refs/heads/2021' }}
           tags: plone/ploneconf-api:2021
+
+  deploy:
+    if: ${{ github.ref == 'refs/heads/2021' }}
+    needs:
+      - docker
+    runs-on: ubuntu-latest
+    environment: "2021.ploneconf.org"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Deploy to plone.org
+        uses: kitconcept/docker-stack-deploy@v1.2.0
+        with:
+          registry: "ghcr.io"
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          remote_host: ${{ secrets.DEPLOY_HOST }}
+          remote_port: ${{ secrets.DEPLOY_PORT }}
+          remote_user: ${{ secrets.DEPLOY_USER }}
+          remote_private_key: ${{ secrets.DEPLOY_SSH }}
+          stack_file: "devops/stacks/2021.ploneconf.org.yml"
+          stack_name: "ploneconf2021"
+          env_file: ${{ secrets.ENV_FILE }}
+          deploy_timeout: 480
