--- a/devops/stacks/2022.ploneconf.org.yml
+++ b/devops/stacks/2022.ploneconf.org.yml
@@ -1,144 +1,62 @@
 version: '3.3'
 
 services:
-  traefik:
-    image: traefik:v2.6
-
-    ports:
-      - 80:80
-      - 443:443
-
-    deploy:
-      labels:
-        - traefik.enable=true
-        - traefik.docker.network=traefik-public
-        - traefik.constraint-label=traefik-public
-        - traefik.http.middlewares.admin-auth.basicauth.users=admin:$$apr1$Jv7k2JvK$uNmYFBXyov5NYPm/SzB09/
-        - traefik.http.routers.traefik-public-https.rule=Host(`traefik.ploneconf.org`)
-        - traefik.http.routers.traefik-public-https.entrypoints=https
-        - traefik.http.routers.traefik-public-https.tls=true
-        - traefik.http.routers.traefik-public-https.service=api@internal
-        - traefik.http.routers.traefik-public-https.middlewares=admin-auth
-        - traefik.http.services.traefik-public.loadbalancer.server.port=8000
-
-        # GENERIC MIDDLEWARES
-        - traefik.http.middlewares.https-redirect.redirectscheme.scheme=https
-        - traefik.http.middlewares.https-redirect.redirectscheme.permanent=true
-        - traefik.http.middlewares.gzip.compress=true
-        - traefik.http.middlewares.gzip.compress.excludedcontenttypes=image/png, image/jpeg, font/woff2
-
-        # GENERIC ROUTERS
-        - traefik.http.routers.generic-https-redirect.entrypoints=http
-        - traefik.http.routers.generic-https-redirect.rule=HostRegexp(`{host:.*}`)
-        - traefik.http.routers.generic-https-redirect.priority=1
-        - traefik.http.routers.generic-https-redirect.middlewares=https-redirect
-
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - traefik-public-certificates:/certificates
-      - traefik-config:/config
-
-    command:
-      - --providers.docker
-      - --providers.docker.constraints=Label(`traefik.constraint-label`, `traefik-public`)
-      - --providers.docker.exposedbydefault=false
-      - --providers.docker.swarmmode
-      - --entrypoints.http.address=:80
-      - --entrypoints.https.address=:443
-      - --certificatesresolvers.le.acme.email=admins@plone.org
-      - --certificatesresolvers.le.acme.storage=/certificates/acme.json
-      - --certificatesresolvers.le.acme.tlschallenge=true
-      - --providers.file.filename=/config/traefik_config.yaml
-      - --accesslog
-      - --log
-      - --api
-
-    networks:
-      - traefik-public
 
   frontend:
     image: plone/ploneconf-frontend:2022
     environment:
       RAZZLE_INTERNAL_API_PATH: http://backend:8080/Plone
     ports:
-    - "3000:3000"
+      - "3000:3000"
     depends_on:
       - backend
     networks:
-    - traefik-public
-    - backend
+      - public
+      - ploneconf2022
     deploy:
       replicas: 2
       labels:
         - traefik.enable=true
-        - traefik.docker.network=traefik-public
-        - traefik.constraint-label=traefik-public
-        # SERVICE
-        - traefik.http.services.plone-frontend.loadbalancer.server.port=3000
-        # HOSTS: Main
-        - traefik.http.routers.frontend.rule=Host(`2022.ploneconf.org`)
-        - traefik.http.routers.frontend.entrypoints=https
-        - traefik.http.routers.frontend.tls=true
-        - traefik.http.routers.frontend.tls.certresolver=le
-        - traefik.http.routers.frontend.service=plone-frontend
-        - traefik.http.routers.frontend.middlewares=gzip
+        - traefik.docker.network=public
+        - traefik.constraint-label=public
+        # Service
+        - traefik.http.services.ploneconf2022-frontend.loadbalancer.server.port=3000
+        # Router
+        - traefik.http.routers.ploneconf2022-frontend.rule=Host(`2022.ploneconf.org`)
+        - traefik.http.routers.ploneconf2022-frontend.entrypoints=https
+        - traefik.http.routers.ploneconf2022-frontend.tls=true
+        - traefik.http.routers.ploneconf2022-frontend.tls.certresolver=le
+        - traefik.http.routers.ploneconf2022-frontend.service=ploneconf2022-frontend
+        - traefik.http.routers.ploneconf2022-frontend.middlewares=gzip
 
   backend:
     image: plone/ploneconf-backend:2022
     environment:
-      RELSTORAGE_DSN: "dbname='plone' user='plone' host='db' password='plone'"
-    depends_on:
-      - db
+      RELSTORAGE_DSN: "dbname='${DB_NAME:-ploneconf2022}' user='${DB_USER:-ploneconf2022}' host='${DB_HOST:-db}' password='${DB_PASSWORD:-ploneconf2022}'"
     networks:
-    - traefik-public
-    - backend
+      - public
+      - ploneconf2022
     deploy:
       replicas: 2
       labels:
         - traefik.enable=true
-        - traefik.docker.network=traefik-public
-        - traefik.constraint-label=traefik-public
-        # SERVICE
-        - traefik.http.services.plone-backend.loadbalancer.server.port=8080
-        # Plone API
-        - traefik.http.routers.backend.rule=Host(`2022.ploneconf.org`) && (PathPrefix(`/++api++`))
-        - traefik.http.routers.backend.entrypoints=https
-        - traefik.http.routers.backend.tls=true
-        - traefik.http.routers.backend.service=plone-backend
-        - traefik.http.middlewares.backend.addprefix.prefix=/VirtualHostBase/https/2022.ploneconf.org/Plone/++api++/VirtualHostRoot
-        - traefik.http.routers.backend.middlewares=gzip, backend
-
-  db:
-    image: postgres:14.2
-    environment:
-      POSTGRES_USER: plone
-      POSTGRES_PASSWORD: plone
-      POSTGRES_DB: plone
-    volumes:
-    - site-data:/var/lib/postgresql/data
-    networks:
-    - backend
-
-volumes:
-  traefik-public-certificates:
-    driver_opts:
-      type: none
-      device: /data/traefik/certificates
-      o: bind
-  traefik-config:
-    driver_opts:
-      type: none
-      device: /data/traefik/config
-      o: bind
-  site-data:
-    driver_opts:
-      type: none
-      device: /srv/ploneconf/data
-      o: bind
+        - traefik.docker.network=public
+        - traefik.constraint-label=public
+        # Service
+        - traefik.http.services.ploneconf2022-backend.loadbalancer.server.port=8080
+        # Middleware
+        - "traefik.http.middlewares.ploneconf2022-vhm.replacepathregex.regex=^/\\+\\+api\\+\\+($$|/.*)"
+        - "traefik.http.middlewares.ploneconf2022-vhm.replacepathregex.replacement=/VirtualHostBase/https/2022.ploneconf.org/Plone/++api++/VirtualHostRoot/$$1"
+        # Router
+        - traefik.http.routers.ploneconf2022-backend.rule=Host(`2022.ploneconf.org`) && (PathPrefix(`/++api++`))
+        - traefik.http.routers.ploneconf2022-backend.entrypoints=https
+        - traefik.http.routers.ploneconf2022-backend.tls=true
+        - traefik.http.routers.ploneconf2022-backend.service=ploneconf2022-backend
+        - traefik.http.routers.ploneconf2022-backend.middlewares=gzip,ploneconf2022-vhm
 
 networks:
-  traefik-public:
+  public:
     external: true
     driver: overlay
-  backend:
+  ploneconf2022:
     driver: overlay
