Fix VHM rewrite

--- a/devops/stacks/2020.ploneconf.org.yml
+++ b/devops/stacks/2020.ploneconf.org.yml
@@ -18,7 +18,7 @@ services:
         # Service
         - traefik.http.services.ploneconf2020-backend.loadbalancer.server.port=8080
         # Middleware
-        - "traefik.http.middlewares.ploneconf2020-vhm.replacepathregex.regex=^/($$|/.*)"
+        - "traefik.http.middlewares.ploneconf2020-vhm.replacepathregex.regex=^/($$|.*)"
         - "traefik.http.middlewares.ploneconf2020-vhm.replacepathregex.replacement=/VirtualHostBase/https/2020.ploneconf.org/Plone/VirtualHostRoot/$$1"
         # Router
         - traefik.http.routers.ploneconf2020-backend.rule=Host(`2020.ploneconf.org`)
