cleanup & fixes reorder service, middleware, routes

--- a/devops/stacks/testing.ploneconf.org.yml
+++ b/devops/stacks/testing.ploneconf.org.yml
@@ -35,25 +35,25 @@ services:
       RELSTORAGE_DSN: "dbname='${DB_NAME:-plone}' user='${DB_USER:-plone}' host='${DB_HOST:-db}' password='${DB_PASSWORD:-plone}'"
     networks:
     - testing_ploneconf
+    - public
     deploy:
       replicas: 2
       labels:
         - traefik.enable=true
-        - traefik.docker.network=public
-        - traefik.constraint-label=public
+        - traefik.docker.network=testing_ploneconf
         # SERVICE
         - traefik.http.services.testing_ploneconf-backend.loadbalancer.server.port=8080
         # MIDDLEWARES
         ### ClassicUI Access Authentication
         - traefik.http.middlewares.testing_ploneconf-backend-auth.basicauth.users=ploneconf:$$2y$$05$$OcevCKwZYZeq3svCxoUpKOnuC1NAIe5Ey23ZLVrARBbOQMOJr4nyG
-        ### Frontend +api_ VHM
+        ### Frontend ++api++ VHM
         - "traefik.http.middlewares.testing_ploneconf-vhm.replacepathregex.regex=^/\\+\\+api\\+\\+($$|/.*)"
         - "traefik.http.middlewares.testing_ploneconf=vhm.replacepathregex.replacement=/VirtualHostBase/https/testing.plone.org/Plone/++api++/VirtualHostRoot/$$1"
         ### Frontend ClassicUI VHM
         - "traefik.http.middlewares.testing_ploneconf-vhm-classicui.replacepathregex.regex=^/ClassicUI($$|/.*)"
         - "traefik.http.middlewares.testing_ploneconf-vhm-classicui.replacepathregex.replacement=/VirtualHostBase/https/testing.plone.org/Plone/VirtualHostRoot/_vh_ClassicUI/$$1"
         # ROUTES
-        ## PloneCONF API
+        ## ploneconf.org API
         - traefik.http.routers.testing_ploneconf-backend.rule=Host(`testing.ploneconf.org`) && (PathPrefix(`/++api++`))
         - traefik.http.routers.testing_ploneconf-backend.entrypoints=https
         - traefik.http.routers.testing_ploneconf-backend.tls=true
