--- a/.github/workflows/backend_testing.yml
+++ b/.github/workflows/backend_testing.yml
@@ -1,5 +1,5 @@
-name: name: Deploy backend testing.ploneconf.org
-
+name: Deploy backend testing
+run-name: Deploy to ${{ inputs.deploy_target }} by @${{ github.actor }}
 on:
   workflow_dispatch:
 #  push:
