--- a/.github/workflows/frontend-testing.yml
+++ b/.github/workflows/frontend-testing.yml
@@ -1,5 +1,5 @@
-name: name: Deploy frontend testing.ploneconf.org
-
+name: Deploy frontend testing
+run-name: Deploy to ${{ inputs.deploy_target }} by @${{ github.actor }}
 
 on:
   workflow_dispatch:
