--- a/.github/workflows/frontend-testing.yml
+++ b/.github/workflows/frontend-testing.yml
@@ -3,6 +3,9 @@ run-name: Deploy to ${{ inputs.deploy_target }} by @${{ github.actor }}
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - testing-deploy
 #  push:
 #    paths:
 #      - "frontend/**"
